--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -14,12 +14,12 @@
 <h1>Waiter WebApp</h1>
 
 <form class="" action="/waiters" method="post">
-  <input type="text" name="user" value="" placeholder="Enter User Name">
+  <!-- <input type="text" name="user" value="" placeholder="Enter User Name"> -->
 <button type="submit" name="button">Submit</button>
 
 {{#each selectDays}}
 
-<h5> {{day_name}}</h5>
+<input type="checkbox" name="dayName" value="{{day_name}}"><label for="scales">{{day_name}}</label>
 
 {{/each}}
 
