added tests to clear database

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,11 @@
 
     <div class="">
       <form class="" action="/waiters" method="post">
-        <input type="text" name="waiter" value="">
+      <input type="text" name="waiter" value="">
 
+      <a href="/waiters"><button type="submit" name="waiterName" value='waiter'>user</button></a>
+      <a href="/waiters"><button type="submit" name="waiterName" value = 'admin'>admin</button></a>
 
-        <button type="submit" name="">Submit</button>
       </form>
 
     </div>
