added tests to check all assigned shifts

--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -1,30 +1,18 @@
 
-    <!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
-<!-- <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer">
-<div class="mdl-layout__drawer">
-  <span class="mdl-layout-title">Title</span>
-
-</div>
-<main class="mdl-layout__content">
-  <div class="page-content"></div>
-</main>
-</div> -->
 
 <div class="container">
-<h1>Waiter WebApp</h1>
+  <h1>Waiter WebApp</h1>
+  <form class="" action="/waiters/{{user_name}}" method="post">
 
-<form class="" action="/waiters" method="post">
-  <!-- <input type="text" name="user" value="" placeholder="Enter User Name"> -->
-<button type="submit" name="button">Submit</button>
+    {{#each selectDays}}
 
-{{#each selectDays}}
+      <input type="checkbox" name="dayName" value="{{day_name}}"><label for="scales" id="daySelect">{{day_name}}</label>
 
-<input type="checkbox" name="dayName" value="{{day_name}}"><label for="scales">{{day_name}}</label>
+    {{/each}}
 
-{{/each}}
+    <button type="submit" name="button">Submit</button>
 
-
-</form>
+  </form>
 
 
 
