--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,9 @@
 <meta charset='utf-8'>
 <!-- <link rel="stylesheet" href="/registration_number.css"> -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/waiter_webapp.css">
 
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
 
 {{{body}}}
