--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,12 @@
 
-    <div class="">
-      <form class="" action="/waiters" method="post">
-      <input type="text" name="waiter" value="">
+    <div class="" id="loginBox">
 
-      <a href="/waiters"><button type="submit" name="waiterName" value='waiter'>user</button></a>
-      <a href="/waiters"><button type="submit" name="waiterName" value = 'admin'>admin</button></a>
+      <h3 id="#loginBox-heading">Waiter Availability</h3>
+      <form action="/login/" method="post">
+      <input type="text" name="waiterName" value="">
+
+      <button type="submit" value='waiter'>user</button>
+      <!-- <button type="submit"value = 'admin'>admin</button> -->
 
       </form>
 
