added working assign shift functionailty and tests

--- a/public/waiter_webapp.css
+++ b/public/waiter_webapp.css
@@ -7,6 +7,13 @@ html, body {
     margin: 0px;
 }
 
+.green {
+    color: green;
+}
+
+.blue {
+    background-color: orange;
+}
 .container {
     max-width: 960px;
     height: 100vh;
