--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -21,7 +21,7 @@
           <div class="column">
 
             <div class="ui checkbox">
-              <input type="checkbox" name="example">
+              <input type="checkbox" name="dayName" value='{{day_name}}'>
               <label>{{day_name}}</label>
             </div>
           </div>
