--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,6 @@
 <meta charset='utf-8'>
-<!-- <link rel="stylesheet" href="/registration_number.css"> -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href=".css/waiter_webapp.css"> -->
+   <link rel="stylesheet" href=".css/waiter_webapp.css"> 
 
   <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
   <script
