add all changes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,3 +13,19 @@
 
 
 {{{body}}}
+
+{{!-- <script>
+$('#checkBox').click(function(e){
+	if (e.target.checked) {
+  	localStorage.checked = true;
+  } else {
+  	localStorage.checked = false;
+  }
+})
+ 
+$( document ).ready(function() {
+  
+	document.querySelector('#checkBox').checked = localStorage.checked
+  
+});
+</script> --}}
