--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,8 +17,9 @@
 
       <div class="column">
         <div class="ui action input">
+          <label for="Waiter"></label>
           <input type="text" placeholder="Enter a Name..." name="waiterName">
-          <button class="ui button" type="submit">Submit</button>
+          <button class="ui button" type="submit">Waiter</button>
         </div>
       </div>
 
