--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -1,10 +1,13 @@
 <div class="ui one column grid">
   <div class="column">
+
     <div class="ui segment">
+
       <h1 class="ui center aligned header">
         Select Days
-        <div class="sub header">Please Select the Days You would Like to Work</div>
+        <div class="sub header">Hi <h4 class ='ui center aligned  header'>{{username}}</h4> Please Select the Days You would Like to Work</div>
       </h1>
+
     </div>
   </div>
 </div>
@@ -28,11 +31,19 @@
 
         {{/each}}
       </div>
-
-      <div class="column">
+  <div class="column">
         <button class="ui button" type="submit">Submit</button>
+
       </div>
-    </div>
+     
+      
+     <div class="column">
+      <a href="/"><i class="sign out alternate icon">Sign Out</i></a>                            
+
+      </div>
+
+
+</div>
 
 </div>
 </form>
