fixed persisting check box issue

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
         <div class="ui action input">
           <label for="Waiter"></label>
           <input type="text" placeholder="Enter a Name..." name="waiterName">
-          <button class="ui button" type="submit">Waiter</button>
+          <button class="ui button" type="submit">Login</button>
         </div>
       </div>
 
