--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -25,7 +25,7 @@
 
             <div class="ui checkbox">
               <input type="checkbox" name="dayName" 
-              {{checkedDays}} 
+              {{checked}} 
               value='{{day_name}}'>
               <label>{{day_name}}</label>
             </div>
