fixed persisting check box issue

--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -5,7 +5,7 @@
 
       <h1 class="ui center aligned header">
         Select Days
-        <div class="sub header">Hi <h4 class ='ui center aligned  dividing header'>{{username}}</h4> Please Select the Days You would Like to Work</div>
+        <div class="sub header">Hi <h4 class ='ui center aligned  dividing header'>{{foundUser}}</h4> Please Select the Days You would Like to Work</div>
       </h1>
 
     </div>
