--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -17,6 +17,15 @@
   <form class="" action="/waiters/{{username}}"  method="post">
 
     <div class="ui seven column centered grid">
+<div class='column'>
+   {{#if messages.info}}
+        <h3 class = 'ui center aligned  dividing header green'> {{messages.info}}</h3>
+    {{/if}}
+</div>
+   
+
+  
+
       <div class="row">
         {{!-- {{#each foundUser}} --}}
         {{#each days}}
@@ -40,10 +49,10 @@
       </div>
      
       
-     {{!-- <div class="column">
+     <div class="column">
       <a href="/"><i class="sign out alternate icon">Sign Out</i></a>                            
 
-      </div> --}}
+      </div>
 
 
 </div>
