add admin login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,15 @@
         <div class="ui action input">
           <label for="Waiter"></label>
           <input type="text" placeholder="Enter a Name..." name="waiterName">
-          <button class="ui button" type="submit">Login</button>
+          <button class="ui button" type="submit">User</button>
+        </div>
+      </div>
+
+       <div class="column">
+        <div class="ui action input">
+          <label for="Waiter"></label>
+          <input type="text" placeholder="Enter a Name..." name="adminName">
+         <a href="/days"><button class="ui button" type="button">Admin</button></a> 
         </div>
       </div>
 
