added validation for username, register function and some flash messages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,6 @@
     crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script> --}}
 
-
+        {{!-- <script src="../timeout.js"></script> --}}
 {{{body}}}
 
