--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -22,7 +22,7 @@
 
         {{#if messages.info}}
         <div class='shift'>
-          <h3 class='ui center aligned  dividing header green'> {{messages.info}}</h3>
+          <h3 class='ui center aligned   header green'> {{messages.info}}</h3>
         </div>
         {{/if}}
       </div>
