added login verification

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,12 @@
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href=".css/waiter_webapp.css"> 
-
+   
   <link rel="stylesheet" type="text/css" href="/semantic/semantic.min.css">
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-  <script src="semantic/semantic.min.js"></script>
+  <script src="/semantic/semantic.min.js"></script>
 
 
 
