--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -40,7 +40,9 @@
         <div class="ui action input">
           <label for="Waiter"></label>
           <input type="text" placeholder="Enter a Name..." name="adminName">
-         <a href="/days"><button class="ui button" type="button">Admin</button></a> 
+         {{!-- <a href="/days"><button class="ui button" type="button">Admin</button></a>  --}}
+        <button class="ui button" type="submit">Admin</button>
+
         </div>
       </div>
 
