--- a/views/waiter_webapp.handlebars
+++ b/views/waiter_webapp.handlebars
@@ -50,7 +50,7 @@
 
 
       <div class="column">
-        <a href="/">
+        <a href="/signout">
           <i class="sign out alternate icon">Sign Out</i>
         </a>
 
